Step 10: Descriptor for Applications

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,2 +1,6 @@
+# App Description
+appTitle = HelloWorld   
+appDescription = A simple walkthrough app that explains the most important concepts of SAPUI5
+# Hello panel
 showHelloButtonText=Say Hello
 helloMsg=Hello {0}
