--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -4,3 +4,5 @@ appDescription = A simple walkthrough app that explains the most important conce
 # Hello panel
 showHelloButtonText=Say Hello
 helloMsg=Hello {0}
+homePageTitle= SAP UI5 -Walkthrough
+helloPanelTitle = Hello World
